<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home_fill0_wght400_grad0_opsz48"
        android:title="@string/home"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/search_fill0_wght400_grad0_opsz48"
        android:title="@string/search"/>
    <item
        android:id="@+id/dailyMealFragment"
        android:enabled="true"
        android:icon="@drawable/calendar_today_fill0_wght400_grad0_opsz48"
        android:title="@string/daily"/>
    <item
        android:id="@+id/favouriteMealFragment"
        android:enabled="true"
        android:icon="@drawable/star_fill0_wght400_grad0_opsz48"
        android:title="@string/favourite"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/person_fill0_wght400_grad0_opsz48"
        android:title="@string/profile"
        />
</menu>