<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pick_day_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="50dp"
    app:cardCornerRadius="50dp"
    >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="25dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/choose_a_day"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSaturday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/saturday"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <Button
                android:id="@+id/btnSunday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sunday"
                app:layout_constraintEnd_toEndOf="@+id/btnSaturday"
                app:layout_constraintStart_toStartOf="@+id/btnSaturday"
                app:layout_constraintTop_toBottomOf="@id/btnSaturday" />

            <Button
                android:id="@+id/btnMonday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/monday"
                app:layout_constraintEnd_toEndOf="@+id/btnSunday"
                app:layout_constraintStart_toStartOf="@+id/btnSunday"
                app:layout_constraintTop_toBottomOf="@id/btnSunday" />

            <Button
                android:id="@+id/btnTuesday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tuesday"
                app:layout_constraintEnd_toEndOf="@+id/btnMonday"
                app:layout_constraintStart_toStartOf="@+id/btnMonday"
                app:layout_constraintTop_toBottomOf="@id/btnMonday" />

            <Button
                android:id="@+id/btnWednesday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/wednesday"
                app:layout_constraintEnd_toEndOf="@+id/btnTuesday"
                app:layout_constraintStart_toStartOf="@+id/btnTuesday"
                app:layout_constraintTop_toBottomOf="@id/btnTuesday" />

            <Button
                android:id="@+id/btnThursday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/thursday"
                app:layout_constraintEnd_toEndOf="@+id/btnWednesday"
                app:layout_constraintStart_toStartOf="@+id/btnWednesday"
                app:layout_constraintTop_toBottomOf="@id/btnWednesday" />

            <Button
                android:id="@+id/btnFriday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/friday"
                app:layout_constraintEnd_toEndOf="@+id/btnThursday"
                app:layout_constraintStart_toStartOf="@+id/btnThursday"
                app:layout_constraintTop_toBottomOf="@id/btnThursday" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
