<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign"
    tools:context=".SignUp">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopng" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:padding="25dp"
        android:elevation="150dp"
        app:cardCornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:textColor="@color/green"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/name"
                android:textColor="#83764F"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfName"
                    android:layout_width="match_parent"
                    android:layout_height="55dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/email"
                android:textColor="#83764F"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintBottom_toBottomOf="@+id/textViewemail"
                app:layout_constraintEnd_toEndOf="@+id/textField"
                app:layout_constraintStart_toStartOf="@+id/textField"
                app:layout_constraintTop_toTopOf="@+id/textViewemail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfEmailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewemail3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"

                android:text="@string/password"
                android:textColor="#83764F"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textViewemail"
                app:layout_constraintTop_toBottomOf="@+id/textViewemail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:layout_constraintBottom_toBottomOf="@+id/textViewemail3"
                app:layout_constraintEnd_toEndOf="@+id/textField2"
                app:layout_constraintStart_toStartOf="@+id/textField2"
                app:layout_constraintTop_toTopOf="@+id/textViewemail3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfPasswordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewemail4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Password"

                android:textColor="#83764F"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textViewemail3"
                app:layout_constraintTop_toBottomOf="@+id/textViewemail5" />

            <TextView
                android:id="@+id/textViewemail5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="5dp"

                android:layout_marginTop="64dp"
                android:text="Confirm"
                android:textColor="#83764F"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textViewemail3"
                app:layout_constraintTop_toBottomOf="@+id/textViewemail3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                app:layout_constraintBottom_toBottomOf="@+id/textViewemail4"
                app:layout_constraintEnd_toEndOf="@+id/textField3"
                app:layout_constraintStart_toStartOf="@+id/textField3"
                app:layout_constraintTop_toTopOf="@+id/textViewemail5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tfConPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignInAuth"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>